Fix MemoizationPolicy error
- Add explicit featurizer configuration to MemoizationPolicy
- Add required default actions to domain.yml
- Create fix_memorization_policy.py script to fix existing models
- Fix 'AttributeError: dict object has no attribute prediction_states'

--- a/config.yml
+++ b/config.yml
@@ -81,6 +81,11 @@ pipeline:
 policies:
   - name: MemoizationPolicy
     max_history: 5
+    featurizer:
+      - name: MaxHistoryTrackerFeaturizer
+        max_history: 5
+        state_featurizer:
+          - name: SingleStateFeaturizer
     
   - name: TEDPolicy
     max_history: 5
