--- a/domain.yml
+++ b/domain.yml
@@ -100,7 +100,7 @@ responses:
         name: language
         value: vi
 
-
+# Single definition of actions with all necessary actions
 actions:
   - action_validate_wallet_address
   - action_reset_contact_slots
@@ -129,6 +129,13 @@ actions:
   - action_fallback_claude
   - action_set_vietnamese_language
   - action_set_english_language
+  - action_listen
+  - action_restart
+  - action_session_start
+  - action_default_fallback
+  - action_default_ask_affirmation
+  - action_default_ask_rephrase
+  - action_back
   
 entities:
   - crypto_description
@@ -334,40 +341,3 @@ imports:
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
-  
-# Add default actions explicitly
-actions:
-  - action_validate_wallet_address
-  - action_reset_contact_slots
-  - action_analyze_sentiment
-  - action_detect_scam
-  - action_classify_topic
-  - action_update_user_expertise
-  - action_extract_crypto_entities
-  - action_handle_context_switch
-  - action_ask_crypto_clarification
-  - action_check_contact_existence
-  - action_correct_crypto_network_typo
-  - action_save_contact
-  - action_update_contact
-  - action_validate_crypto_network
-  - action_clear_crypto_network
-  - action_clear_wallet_address
-  - action_deactivate_loop
-  - action_go_back_in_form
-  - action_offer_validation_alternatives
-  - action_provide_clarification
-  - action_provide_validation_status
-  - action_resume_contact_flow
-  - action_save_progress
-  - action_ask_save_progress
-  - action_fallback_claude
-  - action_set_vietnamese_language
-  - action_set_english_language
-  - action_listen
-  - action_restart
-  - action_session_start
-  - action_default_fallback
-  - action_default_ask_affirmation
-  - action_default_ask_rephrase
-  - action_back
