Add default actions to action server
- Add ActionSessionStart implementation for action_session_start
- Add implementations for other default actions:
  - action_default_fallback
  - action_default_ask_affirmation
  - action_default_ask_rephrase
  - action_restart
  - action_back
- Update actions/__init__.py to register all default actions
- Fix '404, Not Found' error for action_session_start

--- a/domain.yml
+++ b/domain.yml
@@ -341,3 +341,5 @@ imports:
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
+  session_start_metadata_slot: null
+
