Fix RulePolicy featurizer error
- Add featurizer configuration to RulePolicy
- Rename and enhance fix_memorization_policy.py to fix_policy_featurizers.py
- Update script to fix all policies with featurizer issues (Memorization, Rule, TED)
- Add TROUBLESHOOTING.md with common errors and solutions
- Fix 'AttributeError: dict object has no attribute prediction_states' in RulePolicy

--- a/config.yml
+++ b/config.yml
@@ -98,3 +98,8 @@ policies:
     core_fallback_threshold: 0.4
     core_fallback_action_name: "action_fallback_claude"
     enable_fallback_prediction: true
+    featurizer:
+      - name: MaxHistoryTrackerFeaturizer
+        max_history: 5
+        state_featurizer:
+          - name: SingleStateFeaturizer
