--- a/domain.yml
+++ b/domain.yml
@@ -218,6 +218,9 @@ slots:
     mappings:
       - type: from_entity
         entity: contact_add_entity_name
+      - type: from_text
+        intent: provide_contact_name
+        not_intent: [cancel, out_of_scope, nlu_fallback]
     influence_conversation: true
     
   contact_add_entity_crypto_network:
@@ -225,6 +228,9 @@ slots:
     mappings:
       - type: from_entity
         entity: contact_add_entity_crypto_network
+      - type: from_text
+        intent: provide_crypto_network
+        not_intent: [cancel, out_of_scope, nlu_fallback]
     influence_conversation: true
     
   contact_add_entity_wallet_address:
@@ -232,6 +238,11 @@ slots:
     mappings:
       - type: from_entity
         entity: contact_add_entity_wallet_address
+      - type: from_entity
+        entity: wallet_address
+      - type: from_text
+        intent: provide_wallet_address
+        not_intent: [cancel, out_of_scope, nlu_fallback]
     influence_conversation: true
 
   wallet_address:
@@ -397,35 +408,9 @@ slots:
 forms:
   add_contact_form:
     required_slots:
-      contact_add_entity_name:
-        type: from_entity
-        entity: contact_add_entity_name
-        mappings:
-          - type: from_entity
-            entity: contact_add_entity_name
-          - type: from_text
-            intent: provide_contact_name
-            not_intent: [cancel, out_of_scope, nlu_fallback]
-      contact_add_entity_crypto_network:
-        type: from_entity
-        entity: contact_add_entity_crypto_network
-        mappings:
-          - type: from_entity
-            entity: contact_add_entity_crypto_network
-          - type: from_text
-            intent: provide_crypto_network
-            not_intent: [cancel, out_of_scope, nlu_fallback]
-      contact_add_entity_wallet_address:
-        type: from_entity
-        entity: contact_add_entity_wallet_address
-        mappings:
-          - type: from_entity
-            entity: contact_add_entity_wallet_address
-          - type: from_entity
-            entity: wallet_address
-          - type: from_text
-            intent: provide_wallet_address
-            not_intent: [cancel, out_of_scope, nlu_fallback]
+      - contact_add_entity_name
+      - contact_add_entity_crypto_network
+      - contact_add_entity_wallet_address
 
 imports:
   - data/contact/contact_nlu.yml
